
- postgres
    - Index reflection won't fail when an index with 
      multiple expressions is encountered.

- mssql
    - Preliminary support for pymssql 1.0.1

    - Corrected issue on mssql where max_identifier_length was
      not being respected.

- extensions

    - Fixed a recursive pickling issue in serializer, triggered
      by an EXISTS or other embedded FROM construct.

    - Declarative figures out joined-table inheritance primary join
      condition even if "inherits" mapper argument is given 
      explicitly.  Allows mixins to be used with joined table
      inheritance.

    - Declarative will properly interpret the "foreign_keys" argument
      on a backref() if it's a string.
      
0.5.2
======

- orm
    - Further refined 0.5.1's warning about delete-orphan cascade
      placed on a many-to-many relation.   First, the bad news:
      the warning will apply to both many-to-many as well as
      many-to-one relations.  This is necessary since in both 
      cases, SQLA does not scan the full set of potential parents
      when determining "orphan" status - for a persistent object
      it only detects an in-python de-association event to establish
      the object as an "orphan".  Next, the good news: to support 
      one-to-one via a foreign key or assocation table, or to 
      support one-to-many via an association table, a new flag 
      single_parent=True may be set which indicates objects 
      linked to the relation are only meant to have a single parent.
      The relation will raise an error if multiple parent-association
      events occur within Python.

    - Adjusted the attribute instrumentation change from 0.5.1 to 
      fully establish instrumentation for subclasses where the mapper
      was created after the superclass had already been fully
      instrumented. [ticket:1292]
      
    - Fixed bug in delete-orphan cascade whereby two one-to-one
      relations from two different parent classes to the same target 